# aardwolf

./: .editorconfig  .gitignore  Makefile  README.md  Spellbook.xml
MapGenerator/: generate_map.py  graph_generator.py  graph_renderer.py  old_generate_map.py  parser.py  position_calculator.py  pyproject.toml  room.py  test.py
SpellRotation/: README.md  SpellRotation.xml
Spellbook/: README.md  Spellbook.xml
